--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<h1>Feedback Form<h1>
+	<form method = "POST">
+		<label for = "name"> name </label>
+		<input Type = "text" id = "name" minlength = "3" maxlength = "50" required >
+		<label for = "portfolio"> portfolio </label>
+		<input Type = "url" id = "portfolio" required>
+		<label for = "favColor"> Favorite Color </label>
+		<input Type = "color" id = "favColor">
+		<label for = "likeness"> likeness </label>
+		<input Type = "range" min = "1" max = "100" id = "likeness">
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
